force-app/main/default/objects/SuRF_DGX_HOT_Compliance__c/SuRF_DGX_HOT_Compliance__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF_DGX_HOT_Compliance</label>
    <nameField>
        <label>SuRF_DGX_HOT_Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SuRF_DGX_HOT_Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>