force-app/main/default/objects/SuRF_DGX_HOT_Compliance__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>