force-app/main/default/objects/SuRF_DGX_HOT_Compliance__c/fields/Partner_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Name__c</fullName>
    <label>Partner_Program_Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SuRF_Partner_Program</valueSetName>
    </valueSet>
</CustomField>