force-app/main/default/objects/SuRF_DGX_HOT_Compliance__c/fields/Partner_Sub_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sub_Program__c</fullName>
    <label>Partner_Sub_Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>